== Groups by itthinx - changelog.txt

= 2.9.0 =
* WordPress 5.3 compatible.
* Added member counts displayed for each group under Groups > Groups.
* Fixed issues with and added missing internal code documentation mainly related to undocumented types.

= 2.8.0 =
* Added the Groups Members block: A block whose content is only visible for members of selected groups.
* Added the Groups Non-Members block: a block whose content is hidden for members of chosen groups.
* Removed use of parenthesis with require_once and include_once.

= 2.7.2 =
* Fixes an issue with page builders and front-end editing.
* Fixed CSS typo in UIE.
* Formatting improvements.
* Added missing escaping.

= 2.7.1 =
* Improved UIE rendering for group choices and made it more resilient to load dependencies, Javascript execution order and pages where it is used.
* Fixed UIE rendering for group choices with the block editor which would unduly cap the list visually providing an awkward UX.
* Better jQuery dependency resilience on the Users screen.

= 2.7.0 =
* WordPress 5.2 compatible.
* Fixed translation loading to apply the user's locale when set.
* Updated the German translation.
* Updated the Spanish translation.
* Updated the French translation (yet incomplete).
* Added the Indonesian translation.
* Updated the Swedish translation (yet incomplete).
* Updated the Brazilian Portuguese translation (yet incomplete).
* Updated the Dutch translation (yet incomplete).
* Updated the Lithuanian translatoion (yet incomplete).

= 2.6.1 =
* Improved the useability of group and capability selection dropdowns.
* Fixed clash between group filter and group action on Users admin screen.
* Added an option to filter the Users screen to match users who belong to all chosen groups.
* German translation updated.
* Spanish translation updated.
* French translation updated (yet incomplete).
* Updated the minimum required PHP version.

= 2.6.0 =
* Tested for WordPress 5.1.